--- a/Resume.html
+++ b/Resume.html
@@ -1,9 +1,65 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Reume</title>
-    </head>
-    <body bgcolor="green">
-        <p>Simple page</p>
-    </body>
+<head>
+    <title>Resume</title>
+</head>
+<body>
+    <div style="background-color: palevioletred; height: 200px; width: 96%; display: flex; align-items: center; justify-content: space-between; padding: 0 2%; border-radius: 10px; border: solid purple;">
+        <div>
+            <img src="C:\Users\S.V.JAYASUDHA\OneDrive\Pictures\Camera Roll\jay.jpg" height="100px" width="100px" style="border-radius: 100px; border: solid gainsboro;" >
+        </div>
+        <h1 style="margin: 470px; text-align: center; ">JAYASUDHA S V</h1>
+    </div>
+
+
+
+    <div style=" display: flex;">
+        <div style="width: 50%; height: 550px; background-color: rgb(189, 218, 210); padding-right: 20px;margin: 10px 0;">
+            <div>
+                <h2 style="background-color: cadetblue;"> CAREER GOLAS</h2>
+                <ul>
+                <li>Gain practical experience through internships.</li>
+                <li>Participate in hackathons and collaborative projects.</li>
+                <li>Contribute to the field through research and publications.</li>
+                <li>Improve communication and interpersonal skills.</li>
+                <li>Cultivate a strong problem-solving mindset.</li>
+                </ul>
+            </div>
+
+            <div>
+                <h2 style="background-color: cadetblue;">SKILLS</h2>
+                <ol type="1">
+                <li>Master a high-level language (Python, Java, C++).</li>
+                <li>Learn web development (HTML, CSS, JavaScript).</li>
+                <li>Practice coding challenges on platforms like LeetCode.</li>
+                <li>Proficiency in databases (MySQL, PostgreSQL, MongoDB).</li>
+                <li>Learn Agile methodologies and use project management tools (Jira, Trello).</li>
+                </ol>
+            </div>
+
+            <div>
+                <h2 style="background-color: cadetblue;">CONTACT DETAILS</h2>
+                <p >NAME : Jayasudha S V</p>
+                <p>DEPARTMENT : Cse</p>
+                <p>EMAIL ID : jayasudha@student.tce.edu</p>
+                <p>MOBILE NO : 6382026722</p>
+            </div>
+        </div>
+
+        <div style="margin: 10px 0; width: 60%; height: 500px; padding: 20px;">
+            <h2>MY HOBBIE</h2>
+            <p>
+                Playing badminton is more than just a hobby to me; it's a passion that brings joy and excitement to my life. The swift movements on the court, the adrenaline rush during rallies, and the satisfaction of a well-executed shot make badminton a thrilling and fulfilling pursuit. It's not just a game but a way for me to stay active, healthy, and connected with others who share the same enthusiasm. Whether playing casually with friends or engaging in competitive matches, badminton is a source of relaxation, physical exercise, and camaraderie that I truly cherish.
+            </p>
+            <img src="C:\Users\S.V.JAYASUDHA\Downloads\bat.jpg" style="padding: 5px;width: fit-content;border: 1px solid black; height: 300px; width: 300px; align-content: center;" >
+            <figcaption style="color: black;padding: 10px;text-align: center;background: grey; height: 20px; width: 294px;"> Smash the moment</figcaption>
+        </div>
+    </div>
+
+    <div style="text-align: center;">
+        <h3 style="color: burlywood;"> CONTACT ME THROUGH ABOVE MENTIONED PROFILE</h3>
+        <p style="color: blue;">Linkedin</p>
+    </div>
+
+</body>
 </html>
