--- a/reg.html
+++ b/reg.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Regis.css">
+    <link rel="stylesheet" href="reg.css">
     <title>WRIGHTERS HUB Registration</title>
 </head>
 <body>
