--- a/loginpage.html
+++ b/loginpage.html
@@ -5,9 +5,25 @@
 <link rel="stylesheet" href="loginpage.css">
 </head>
 <body>
-
+  <div class="wrapper">
+    <div><span class="dot"></span></div>
+    <div><span class="dot"></span></div>
+    <div><span class="dot"></span></div>
+    <div><span class="dot"></span></div>
+    <div><span class="dot"></span></div>
+    <div><span class="dot"></span></div>
+    <div><span class="dot"></span></div>
+    <div><span class="dot"></span></div>
+    <div><span class="dot"></span></div>
+    <div><span class="dot"></span></div>
+    <div><span class="dot"></span></div>
+    <div><span class="dot"></span></div>
+    <div><span class="dot"></span></div>
+    <div><span class="dot"></span></div>
+    <div><span class="dot"></span></div>
+  </div>
 <form action="/action_page.php" method="post">
-    <h2 >Login Form</h2>
+    <br><h2 style="color: rgb(66, 66, 239);" >Login Form</h2>
   <div class="imgcontainer">
     <img src="C:\Users\S.V.JAYASUDHA\Downloads\girl.jpg"  class="avatar">
   </div>
