--- a/reg.html
+++ b/reg.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="wrapper">
+         <div><span class="dot"></span></div>
         <div><span class="dot"></span></div>
         <div><span class="dot"></span></div>
         <div><span class="dot"></span></div>
@@ -22,26 +23,26 @@
         <div><span class="dot"></span></div>
         <div><span class="dot"></span></div>
         <div><span class="dot"></span></div>
-        <div><span class="dot"></span></div>
-      </div>
-    <form onsubmit="return validateForm()">
+    </div>
+
+    <form onsubmit="return formValidator.validateForm()">
         <h3>SignUp</h3><br>  <br>
         <div class="image-container">
-        <img src="C:\Users\S.V.JAYASUDHA\Downloads\girl.jpg" alt="Trulli" width="150px" height="150px" style="border-radius: 90px; align-items: center;  border: solid rgb(70, 68, 68);">
+            <img onerror="imageErrorHandler.handle()" src="C:\Users\S.V.JAYASUDHA\Downloads\girl.jpg" alt="Trulli" width="150px" height="150px" style="border-radius: 90px; align-items: center;  border: solid rgb(70, 68, 68);">
         </div>
         <div class="container">
             <label for="firstName" class="required">First Name</label>
-            <input type="text" id="firstName" name="firstName" placeholder="First Name" style="margin-left: 2%" required>
+            <input type="text" id="firstName" name="firstName" onchange="textTransformer.toUpperCase('firstName')" placeholder="First Name" style="margin-left: 2%" required>
         </div>
         <div class="container">
             <label for="lastName" class="required">Last Name</label>
-            <input type="text" id="lastName" name="lastName" placeholder="Last Name" style="margin-left: 2%" required>
+            <input type="text" id="lastName" name="lastName" onchange="textTransformer.toUpperCase('lastName')" placeholder="Last Name" style="margin-left: 2%" required>
         </div>
         <div class="container">
             <label for="username" class="required">Username</label>
             <input type="text" id="username" name="username" placeholder="Username" style="margin-left: 2%" required>
         </div>
-        <div class="name-container">
+         <div class="name-container">
             <label for="password" class="required">Password</label>
             <input type="password" id="password" name="password" placeholder="password" required>
             <label for="Confirm password" class="required">Confirm Password</label>
@@ -49,7 +50,7 @@
         </div>
         <div class="name-container">
             <label for="email">E-mail</label>
-            <input type="email" id="email" name="email" required>
+            <input type="email" id="email" onchange="textTransformer.toLowerCase('email')" name="email" required>
             <div id="emailError" style="color: red;"></div>
             <label for="dob" class="required">DOB</label>
             <input type="date" id="birthday" name="birthday" required>
@@ -97,7 +98,7 @@
         <textarea id="address" name="address" rows="4" column="50" placeholder="Type your address here..." required></textarea>
         <div class="name-container">
             <label for="experience">Do you have any writing experience?</label>
-            <select id="experience" name="experience" onchange="toggleConditionalQuestions()" required>
+            <select id="experience" name="experience" onchange="conditionalQuestions.toggle()" required>
                 <option value="select">Select</option>
                 <option value="yes">Yes</option>
                 <option value="no">No</option>
@@ -108,26 +109,26 @@
             <input type="number" id="experienceYears" name="experienceYears" >
             <label for="genresInterest">Genres of Writing</label>
             <div class="check">
-                <input type="checkbox" id="fiction" name="genresInterest" value="Fiction">
+                <input type="checkbox"  id="Fiction" name="genresInterest" value="Fiction">
                 <label for="fiction">Fiction</label>
             </div>
             <div class="check">
-                <input type="checkbox" id="nonFiction" name="genresInterest" value="Non-fiction">
+                <input type="checkbox"  id="Non-fiction" name="genresInterest" value="Non-fiction">
                 <label for="nonFiction">Nonfiction</label>
             </div>
 
             <div class="check">
-                <input type="checkbox" id="poetry" name="genresInterest" value="Poetry">
+                <input type="checkbox"  id="Poetry" name="genresInterest" value="Poetry">
                 <label for="poetry">Poetry</label>
             </div>
 
             <div class="check">
-                <input type="checkbox" id="drama" name="genresInterest" value="Drama">
+                <input type="checkbox"  id="Drama" name="genresInterest" value="Drama">
             <label for="drama">Drama</label>
             </div>
 
             <label for="others">Others:</label>
-            <input type="text" id="othersText" name="othersText">
+            <input type="text"  id="focus" onfocus="focusHandler.changeBackground('focus')" name="othersText">
         </div>
         <div class="conditional-question conditional-question-no" id="conditionalQuestionNo">
             <label for="genresInterest">Genres of Interest</label>
@@ -151,7 +152,7 @@
             </div>
 
             <label for="others">Others:</label>
-            <input type="text" id="othersText" name="othersText">
+            <input type="text" id="focus1" onfocus="focusHandler.changeBackground('focus1')" name="othersText">
         </div >
         <div class="name-container">
             <label for="phoneNumber">Phone Number:</label>
@@ -163,7 +164,7 @@
         <div class="otp">
             <button type="button" style="background-color: rgba(2, 248, 231, 0.604)" onclick="sendOTP()">Send OTP</button>
             <button type="button" style="background-color: rgba(2, 248, 231, 0.604)" onclick="resendOTP()" id="resendBtn">Resend OTP</button><br>
-            <button type="submit" style="background-color: rgba(2, 248, 231, 0.604)" id="submitBtn" style="display: none;">Verify OTP</button>
+            <button onclick="myverify()" id="verify" type="submit" style="background-color: rgba(2, 248, 231, 0.604)" id="submitBtn" style="display: none;">Verify OTP</button>
         </div>
         <label class="agree">
             <input type="checkbox" id="agree" name="agree">
@@ -172,35 +173,99 @@
                </span>
         </label>
         <div class="verify">
-            <button type="reset" style="background-color: red">Reset</button>
-            <button type="submit" style="background-color: green">Submit</button>
+            <button type="reset" style="background-color: red" onreset="formHandler.reset()">Reset</button>
+            <button type="submit" style="background-color: green" onsubmit="formHandler.submit()">Submit</button>
         </div>
-
     </form>
-   
 
     <script>
         function validateForm() {
-            // Your validation logic here
-            return true; // or false based on validation result
+        // Get the password input value
+        var passwordInput = document.getElementById('password').value;
+
+        // Password criteria
+        var minLength = 8;
+        var hasUppercase = /[A-Z]/.test(passwordInput);
+        var hasLowercase = /[a-z]/.test(passwordInput);
+        var hasDigit = /\d/.test(passwordInput);
+
+        // Check if the password meets the criteria
+        if (passwordInput.length < minLength || !hasUppercase ||hasLowercase || !hasDigit) {
+            // Display the error message
+            document.getElementById('passwordError').innerText = 'Password must be at least 8 characters long and include 1 uppercase letter,lowercase letter and a digit.';
+            return false; // Prevent form submission
         }
 
-        function toggleConditionalQuestions() {
-            var experienceSelect = document.getElementById('experience');
-            var conditionalQuestionYes = document.getElementById('conditionalQuestionYes');
-            var conditionalQuestionNo = document.getElementById('conditionalQuestionNo');
+        // Clear the error message if the password is valid
+        document.getElementById('passwordError').innerText = '';
 
-            if (experienceSelect.value === 'yes') {
-                conditionalQuestionYes.style.display = 'block';
-                conditionalQuestionNo.style.display = 'none';
-            } else {
-                conditionalQuestionYes.style.display = 'none';
-                conditionalQuestionNo.style.display = 'block';
+        // Continue with other form validation logic if needed
+
+        return true; // Allow form submission
+    }
+    function sendOTP() {
+            var otpSection = document.getElementById('otpSection');
+            var submitBtn = document.getElementById('submitBtn');
+
+            // Simulate OTP generation and show the OTP input section
+            otpSection.style.display = 'block';
+            submitBtn.style.display = 'block';
+            alert('OTP sent!'); // Simulate sending OTP (replace with actual logic)
+        }
+
+        function resendOTP() {
+            // Simulate OTP resend (replace with actual logic)
+            alert('OTP resent!');
+        }
+        const conditionalQuestions = {
+            toggle: function () {
+                var experienceSelect = document.getElementById('experience');
+                var conditionalQuestionYes = document.getElementById('conditionalQuestionYes');
+                var conditionalQuestionNo = document.getElementById('conditionalQuestionNo');
+
+                if (experienceSelect.value === 'yes') {
+                    conditionalQuestionYes.style.display = 'block';
+                    conditionalQuestionNo.style.display = 'none';
+                } else {
+                    conditionalQuestionYes.style.display = 'none';
+                    conditionalQuestionNo.style.display = 'block';
+                }
             }
-        }
+        };
+
+        const formHandler = {
+            submit: function () {
+                alert("Form is submitted");
+            },
+            reset: function () {
+                alert("The Form is reset");
+            }
+        };
+
+        const textTransformer = {
+            toUpperCase: function (elementId) {
+                var element = document.getElementById(elementId);
+                element.value = element.value.toUpperCase();
+            },
+            toLowerCase:function(elementId){
+                var element=document.getElementById(elementId);
+                element.value=element.value.toLowerCase();
+            }
+        };
+
+        const imageErrorHandler = {
+            handle: function () {
+                alert("The image couldn't be loaded");
+            }
+        };
+
+        const focusHandler = {
+            changeBackground: function (elementId) {
+                var element = document.getElementById(elementId);
+                element.style.background = "yellow";
+            }
+        };
     </script>
-
-
 
 </body>
 </html>
