--- a/.vscode/sam1.html
+++ b/.vscode/sam1.html
@@ -4,29 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="reg.css">
+    <link rel="stylesheet" href="sam1.css">
     <title>WRIGHTERS HUB Registration</title>
 </head>
 
 <body>
-    <div class="wrapper">
-        <div><span class="dot"></span></div>
-        <div><span class="dot"></span></div>
-        <div><span class="dot"></span></div>
-        <div><span class="dot"></span></div>
-        <div><span class="dot"></span></div>
-        <div><span class="dot"></span></div>
-        <div><span class="dot"></span></div>
-        <div><span class="dot"></span></div>
-        <div><span class="dot"></span></div>
-        <div><span class="dot"></span></div>
-        <div><span class="dot"></span></div>
-        <div><span class="dot"></span></div>
-        <div><span class="dot"></span></div>
-        <div><span class="dot"></span></div>
-        <div><span class="dot"></span></div>
-        <div><span class="dot"></span></div>
-    </div>
+    
     <form onsubmit="formHandler.submit()" onreset="formHandler.reset()">
         <h3>SignUp</h3><br> <br>
         <div class="image-container">
