--- a/loginpage.html
+++ b/loginpage.html
@@ -5,23 +5,7 @@
 <link rel="stylesheet" href="loginpage.css">
 </head>
 <body>
-  <div class="wrapper">
-    <div><span class="dot"></span></div>
-    <div><span class="dot"></span></div>
-    <div><span class="dot"></span></div>
-    <div><span class="dot"></span></div>
-    <div><span class="dot"></span></div>
-    <div><span class="dot"></span></div>
-    <div><span class="dot"></span></div>
-    <div><span class="dot"></span></div>
-    <div><span class="dot"></span></div>
-    <div><span class="dot"></span></div>
-    <div><span class="dot"></span></div>
-    <div><span class="dot"></span></div>
-    <div><span class="dot"></span></div>
-    <div><span class="dot"></span></div>
-    <div><span class="dot"></span></div>
-  </div>
+  
 <form action="/action_page.php" method="post">
     <br><h2 style="color: rgb(66, 66, 239);" >Login Form</h2>
   <div class="imgcontainer">
@@ -40,7 +24,7 @@
     
   </div>
 
-  <div class="container" style="background-color:#f1f1f1">
+  <div class="container" style="background-color:#f1f1f1;border-radius: 10px; ">
     <button type="button" class="cancelbtn">Back</button>
     <span class="psw">Forgot <a href="#">password?</a></span>
   </div>
